<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="fh_mod_version">FireHound Version</string>
    <string name="reset">Reset</string>
    <string name="ashes_title">Ashes</string>
    <string name="status_bar_title">Status Bar</string>
    <string name="statusbar_icons">Icons</string>
    <string name="qs_title">Quick Settings</string>
    <string name="notification_title">Notifications</string>
    <string name="lockscreen_title">Lock Screen</string>
    <string name="recents_settings">Recents</string>
    <string name="button_title">Hardware Buttons</string>
    <string name="navbar_title">Navigation Bar</string>
    <string name="display_title">UI / UX</string>
    <string name="sound_title">Sounds</string>
    <string name="animation_settings">Animations</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="back_soon_title">Hey there</string>
    <string name="back_soon_summary">We will be back soon with all the features! Till then chill ya!!!</string>
    <string name="lockscreen_gestures">Lockscreen Gestures</string>
    <string name="lockscreen_ui_ux">UI / UX</string>
    <string name="ui">UI</string>
    <string name="ux">UX</string>
    <string name="lockscreen_misc">Miscellaneous Settings</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="double_tap_to_sleep_lockscreen_title">Double tap to sleep on lockscreen</string>
    <string name="double_tap_to_sleep_lockscreen_summary">Double tap on the top third or bottom shortcut area of the lock screen to put the device to sleep</string>
    <string name="tuner">Tuner</string>
    <string name="statusbar_items_category">Statusbar Tuner</string>
    <string name="network_traffic_settings_title">Network traffic monitor</string>
    <string name="network_traffic_settings_summary">Display and customize current network traffic levels</string>
    <string name="network_traffic_location_title">Location</string>
    <string name="network_traffic_location_disable">Disabled</string>
    <string name="network_traffic_location_statusbar">Statusbar</string>
    <string name="network_traffic_location_quick_statusbar">Quick Statusbar</string>
    <string name="network_traffic_mode_title">Display mode</string>
    <string name="network_traffic_mode_up">Upload only</string>
    <string name="network_traffic_mode_down">Download only</string>
    <string name="network_traffic_mode_all">Upload and download</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when inactive</string>
    <string name="network_traffic_autohide_kilobits">kb/s</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="network_traffic_show_units">Show units</string>
    <string name="network_traffic_show_units_summary">Whether to show traffic measurement units</string>
    <string name="network_traffic_units_title">Traffic measurement units</string>
    <string name="network_traffic_units_bits">Bits per second (b/s)</string>
    <string name="network_traffic_units_kilobits">Kilobits per second (kb/s)</string>
    <string name="network_traffic_units_megabits">Megabits per second (Mb/s)</string>
    <string name="network_traffic_units_bytes">Bytes per second (B/s)</string>
    <string name="network_traffic_units_kilobytes">Kilobytes per second (kB/s)</string>
    <string name="network_traffic_units_megabytes">Megabytes per second (MB/s)</string>
    <string name="network_traffic_hidearrow">Hide arrows</string>
    <string name="network_traffic_hidearrow_summary">Hide the network traffic indicator arrows</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lockscreen while charging</string>
    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="anbi_title">Accidental touch</string>
    <string name="anbi_summary">Prevent interaction with navigation buttons while the screen is being touched</string>
    <string name="battery_bar_title">Battery bar</string>
    <string name="battery_bar">Location</string>
    <string name="battery_bar_no_navbar">Location</string>
    <string name="battery_bar_color">Color</string>
    <string name="battery_bar_charging_color">Charging color</string>
    <string name="battery_bar_battery_low_color">Low battery color</string>
    <string name="battery_bar_style_title">Alignment</string>
    <string name="battery_bar_thickness_title">Thickness</string>
    <string name="battery_bar_animate_title">Charging animation</string>
    <string name="battery_bar_use_charging_color">Custom charging color</string>
    <string name="battery_bar_blend_color_title">Blend colors</string>
    <string name="battery_bar_blend_color_summary">Blend full/empty colors corresponding to battery percentage</string>
    <string name="battery_bar_blend_color_reverse_title">Reverse color direction</string>
    <string name="battery_bar_blend_color_reverse_summary_off">Full &#8594; empty: red &#8592; green &#8592; blue &#8592; red</string>
    <string name="battery_bar_blend_color_reverse_summary_on">Full &#8594; empty: red &#8594; green &#8594; blue &#8594; red</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="advanced_reboot_title">Advanced restart</string>
    <string name="advanced_reboot_summary">When unlocked, include options in the power menu for restarting into recovery or bootloader</string>
    <string name="power_menu_screenshot_title">Screenshot</string>
    <string name="power_menu_airplane_title">Airplane mode</string>
    <string name="power_menu_users_title">User switcher</string>
    <string name="dashboard_conditions_title">Dashboard conditions</string>
    <string name="summary_dashboard_conditions_enabled">Dashboard conditions are enabled</string>
    <string name="summary_dashboard_conditions_disabled">Dashboard conditions are disabled</string>
    <string name="dashboard_suggestions_title">Dashboard suggestions</string>
    <string name="summary_dashboard_suggestions_enabled">Dashboard suggestions are enabled</string>
    <string name="summary_dashboard_suggestions_disabled">Dashboard suggestions are disabled</string>
    <string name="pulse_on_new_tracks_title">Music ticker</string>
    <string name="pulse_on_new_tracks_summary">Show Ambient Display when a new music track is played</string>
    <string name="pocket_judge_title">Pocket detection</string>
    <string name="pocket_judge_summary">Block screen and button inputs when device is in pocket</string>
    <string name="fingerprint_title">Fingerprint</string>
    <string name="smart_pixels_title">Smart Pixels</string>
    <string name="smart_pixels_enable_title">Enable Smart Pixels</string>
    <string name="smart_pixels_enable_summary">Shut off pixels to reduce power consumption</string>
    <string name="smart_pixels_on_power_save_title">Auto-enable on battery saver</string>
    <string name="smart_pixels_on_power_save_summary">Enable Smart Pixels when battery saver is enabled</string>
    <string name="smart_pixels_percent">Percent of pixels to disable</string>
    <string name="smart_pixels_shift">Prevent burn-in by shifting pixels every</string>
    <string name="data_disabled_icon_title">Data disabled indicator</string>
    <string name="data_disabled_icon_summary">Display the cross sign next to signal icon when data is disabled</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon when available</string>
    <string name="roaming_indicator_icon_title">Roaming indicator</string>
    <string name="roaming_indicator_icon_summary">Display roaming indicator in signal icon when in roaming mode</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_screenshot_summary">Long-press for partial screenshot</string>
    <string name="power_menu_bug_report_title">Bug report</string>
    <string name="power_menu_lockdown_title">Lockdown</string>
    <string name="wireless_charging_animation_title">Charging animation</string>
    <string name="wireless_charging_animation_summary">Display an animation when the device is plugged in</string>
    <string name="lockscreen_enable_power_menu_title">Power menu</string>
    <string name="lockscreen_enable_power_menu_summary">Allow accessing power menu on secure lock screen</string>
    <string name="corners_title">Rounded corners</string>
    <string name="corners_summary">Allow customized rounded corners</string>
    <string name="power_menu_screenrecord_title">Screenrecord</string>
    <string name="power_menu_buttons_title">ACTIONS</string>
    <string name="doze_display_title">Ambient display</string>
    <string name="doze_sensor_title">Sensor based</string>
    <string name="tilt_title">Tilt</string>
    <string name="tilt_summary">Pulse notifications on tilt</string>
    <string name="pickup_title">Pick up</string>
    <string name="pickup_summary">Pulse notifications on pick up</string>
    <string name="handwave_title">Hand wave</string>
    <string name="handwave_summary">Pulse notifications on hand wave</string>
    <string name="pocket_title">Pocket</string>
    <string name="pocket_summary">Pulse notifications on removal from pocket</string>
    <string name="doze_vibrate">Vibrate</string>
    <string name="doze_vibrate_summary">Duration to vibrate when pulsing notifications</string>
    <string name="unit_milliseconds">milliseconds</string>
    <string name="lockscreen_albumart_filter_title">Media cover art filter</string>
    <string name="music_visualizer_title">Music visualizer</string>
    <string name="music_visualizer_summary">Display music visualizer when available</string>
    <string name="lockscreen_autocolor_title">Automatic color</string>
    <string name="lockscreen_autocolor_summary">Sync color with background</string>
    <string name="lockscreen_lavalamp_title">Lava lamp</string>
    <string name="lockscreen_lavalamp_summary">Animate smooth lava lamp style color blend</string>
    <string name="lockscreen_lavalamp_speed_title">Lava lamp color blend interval</string>
    <string name="lockscreen_solid_units_count_title">Solid lines count</string>
    <string name="lockscreen_solid_fudge_factor_title">Sanity level</string>
    <string name="lockscreen_solid_units_opacity_title">Solid lines opacity</string>
    <string name="doze_brightness_title">Brightness</string>
    <string name="ambient_pulse_brightness_title">Ambient notification brightness</string>
    <string name="ambient_pulse_brightness_summary">Set brightness to use when notifcations are shown</string>
    <string name="ambient_doze_brightness_title">Ambient display brightness</string>
    <string name="ambient_doze_brightness_summary">Set brightness to use during ambient display on</string>
    <string name="fod_recog_animation">FOD recognizing animation</string>
    <string name="fod_recog_animation_summary">Shows animation while reading your finger</string>
</resources>