<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (C) 2019 FireHound

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:lineage="http://schemas.android.com/apk/res/lineageos.platform"
                  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
                  android:title="@string/display_title">

    <PreferenceCategory
        android:key="fh_ux"
        android:title="@string/ux" >

        <!-- Pocket Judge -->
        <com.fh.settings.preferences.SystemSettingSwitchPreference
            android:key="pocket_judge"
            android:title="@string/pocket_judge_title"
            android:summary="@string/pocket_judge_summary"
            android:defaultValue="false" />

        <!-- Accidental touch -->
        <com.fh.settings.preferences.SystemSettingSwitchPreference
            android:key="anbi_enabled"
            android:title="@string/anbi_title"
            android:summary="@string/anbi_summary"
            android:defaultValue="false" />

        <!-- Music Ticker -->
        <com.fh.settings.preferences.SecureSettingSwitchPreference
            android:key="pulse_on_new_tracks"
            android:title="@string/pulse_on_new_tracks_title"
            android:summary="@string/pulse_on_new_tracks_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="fh_smart_pixels"
        android:title="@string/smart_pixels_title" >

        <!-- Smart Pixels -->
        <com.fh.settings.preferences.SystemSettingSwitchPreference
            android:key="smart_pixels_enable"
            android:title="@string/smart_pixels_enable_title"
            android:summary="@string/smart_pixels_enable_summary"
            android:defaultValue="false" />

        <com.fh.settings.preferences.SystemSettingSwitchPreference
            android:key="smart_pixels_on_power_save"
            android:title="@string/smart_pixels_on_power_save_title"
            android:summary="@string/smart_pixels_on_power_save_summary"
            android:defaultValue="false" />

        <com.fh.settings.preferences.SystemSettingListPreference
            android:key="smart_pixels_pattern"
            android:entries="@array/smart_pixels_percent_strings"
            android:entryValues="@array/smart_pixels_percent_values"
            android:defaultValue="3"
            android:title="@string/smart_pixels_percent"
            android:dialogTitle="@string/smart_pixels_percent" />

        <com.fh.settings.preferences.SystemSettingListPreference
            android:key="smart_pixels_shift_timeout"
            android:entries="@array/smart_pixels_shift_times"
            android:entryValues="@array/smart_pixels_shift_values"
            android:defaultValue="5"
            android:title="@string/smart_pixels_shift"
            android:dialogTitle="@string/smart_pixels_shift" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="fh_ui"
        android:title="@string/ui" >

        <!-- Rounded Corners -->
        <PreferenceScreen
            android:key="rounded_corners"
            android:title="@string/corners_title"
            android:summary="@string/corners_summary"
            android:fragment="com.fh.settings.fragments.ui.RoundedCorners" />

        <!-- Disable dashboard conditions -->
        <com.fh.settings.preferences.SystemSettingSwitchPreference
            android:key="enable_conditions"
            android:title="@string/dashboard_conditions_title"
            android:summaryOn="@string/summary_dashboard_conditions_enabled"
            android:summaryOff="@string/summary_dashboard_conditions_disabled"
            android:defaultValue="true" />

        <!-- Disable dashboard suggestions -->
        <com.fh.settings.preferences.SystemSettingSwitchPreference
            android:key="enable_suggestions"
            android:title="@string/dashboard_suggestions_title"
            android:summaryOn="@string/summary_dashboard_suggestions_enabled"
            android:summaryOff="@string/summary_dashboard_suggestions_disabled"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
