<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (C) 2019 FireHound

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:lineage="http://schemas.android.com/apk/res/lineageos.platform"
                  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
                  android:title="@string/lockscreen_title">

    <PreferenceCategory
        android:key="lockscreen_ui"
        android:title="@string/lockscreen_ui_ux" >

        <!-- Lockscreen charging -->
        <com.fh.settings.preferences.SystemSettingSwitchPreference
            android:key="lockscreen_battery_info"
            android:title="@string/lockscreen_battery_info_title"
            android:summary="@string/lockscreen_battery_info_summary"
            android:defaultValue="true" />

        <!-- Wireless charging animation -->
        <com.fh.settings.preferences.SystemSettingSwitchPreference
            android:key="wireless_charging_animation"
            android:title="@string/wireless_charging_animation_title"
            android:summary="@string/wireless_charging_animation_summary"
            android:defaultValue="false" />

        <!-- Power menu on lockscreen -->
        <com.fh.settings.preferences.SystemSettingSwitchPreference
            android:key="lockscreen_enable_power_menu"
            android:title="@string/lockscreen_enable_power_menu_title"
            android:summary="@string/lockscreen_enable_power_menu_summary"
            android:defaultValue="true"/>

        <lineageos.preference.LineageSecureSettingSwitchPreference
            android:key="lockscreen_media_metadata"
            android:title="@string/media_art_title"
            android:summary="@string/media_art_summary"
            android:defaultValue="true" />

        <com.fh.settings.preferences.SecureSettingListPreference
            android:key="lockscreen_albumart_filter"
            android:title="@string/lockscreen_albumart_filter_title"
            android:entries="@array/lockscreen_albumart_filter_entries"
            android:entryValues="@array/lockscreen_albumart_filter_values"
            android:dependency="lockscreen_media_metadata"
            android:defaultValue="0" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="lockscreen_visualizer_settings"
        android:title="@string/music_visualizer_title" >

        <com.fh.settings.preferences.SecureSettingSwitchPreference
        android:key="lockscreen_visualizer_enabled"
        android:title="@string/music_visualizer_title"
        android:summary="@string/music_visualizer_summary"
        android:defaultValue="true" />

    <com.fh.settings.preferences.SecureSettingSwitchPreference
       android:key="lockscreen_visualizer_autocolor"
        android:title="@string/lockscreen_autocolor_title"
        android:summary="@string/lockscreen_autocolor_summary"
        android:defaultValue="false"
        android:dependency="lockscreen_visualizer_enabled"/>

    <com.fh.settings.preferences.SecureSettingSwitchPreference
        android:key="lockscreen_lavalamp_enabled"
        android:title="@string/lockscreen_lavalamp_title"
        android:summary="@string/lockscreen_lavalamp_summary"
        android:defaultValue="true"
        android:dependency="lockscreen_visualizer_enabled"/>

    <com.fh.settings.preferences.SecureSettingSeekBarPreference
        android:key="lockscreen_lavalamp_speed"
        android:title="@string/lockscreen_lavalamp_speed_title"
        android:defaultValue="10000"
        android:max="30000"
        settings:min="200"
        settings:interval="200"
        settings:units="@string/unit_milliseconds"
        android:dependency="lockscreen_lavalamp_enabled"/>

    <com.fh.settings.preferences.SecureSettingSeekBarPreference
        android:key="lockscreen_solid_units_count"
        android:title="@string/lockscreen_solid_units_count_title"
        android:defaultValue="32"
        android:max="128"
        settings:min="16"
        settings:interval="16"
        android:dependency="lockscreen_visualizer_enabled"/>

    <com.fh.settings.preferences.SecureSettingSeekBarPreference
        android:key="lockscreen_solid_fudge_factor"
        android:title="@string/lockscreen_solid_fudge_factor_title"
        android:defaultValue="16"
        android:max="32"
        settings:min="2"
        android:dependency="lockscreen_visualizer_enabled"/>

    <com.fh.settings.preferences.SecureSettingSeekBarPreference
        android:key="lockscreen_solid_units_opacity"
        android:title="@string/lockscreen_solid_units_opacity_title"
        android:defaultValue="140"
        android:max="255"
        settings:min="0"
        android:dependency="lockscreen_visualizer_enabled"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="lockscreen_fingerptint"
        android:title="@string/fingerprint_title" >

        <!-- Fingerprint vibration -->
        <com.fh.settings.preferences.SystemSettingSwitchPreference
            android:key="fp_success_vibrate"
            android:title="@string/fprint_sucess_vib_title"
            android:summary="@string/fprint_sucess_vib_summary"
            android:defaultValue="true" />

        <com.fh.settings.preferences.SystemSettingSwitchPreference
            android:key="fod_recognizing_animation"
            android:title="@string/fod_recog_animation"
            android:summary="@string/fod_recog_animation_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
