<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2019 FireHound

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/doze_display_title">

    <com.fh.settings.preferences.SecureSettingSwitchPreference
        android:key="doze_enabled"
        android:defaultValue="false"
        android:title="@string/doze_title"
        android:summary="@string/doze_summary" />

    <com.fh.settings.preferences.SecureSettingSwitchPreference
        android:key="doze_always_on"
        android:title="@string/doze_always_on_title"
        android:defaultValue="false"
        android:summary="@string/doze_always_on_summary" />

    <lineageos.preference.RemotePreference
        android:key="doze_device_settings"
        android:title="@string/ambient_display_screen_title">
        <intent
            android:action="org.lineageos.settings.device.DOZE_SETTINGS" />
    </lineageos.preference.RemotePreference>

    <PreferenceCategory
        android:key="doze_sensor"
        android:title="@string/doze_sensor_title" >

        <com.fh.settings.preferences.SecureSettingSwitchPreference
            android:key="doze_tilt_gesture"
            android:defaultValue="false"
            android:title="@string/tilt_title"
            android:summary="@string/tilt_summary" />

        <com.fh.settings.preferences.SecureSettingSwitchPreference
            android:key="doze_pick_up_gesture"
            android:defaultValue="false"
            android:title="@string/pickup_title"
            android:summary="@string/pickup_summary" />

        <com.fh.settings.preferences.SecureSettingSwitchPreference
            android:key="doze_handwave_gesture"
            android:defaultValue="false"
            android:title="@string/handwave_title"
            android:summary="@string/handwave_summary" />

        <com.fh.settings.preferences.SecureSettingSwitchPreference
            android:key="doze_pocket_gesture"
            android:defaultValue="false"
            android:title="@string/pocket_title"
            android:summary="@string/pocket_summary" />

        <com.fh.settings.preferences.SecureSettingSeekBarPreference
            android:key="doze_gesture_vibrate"
            android:title="@string/doze_vibrate"
            android:summary="@string/doze_vibrate_summary"
            android:defaultValue="0"
            settings:defaultText="@string/disabled"
            android:max="2000"
            settings:min="0"
            settings:interval="10"
            settings:units="@string/unit_milliseconds" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="doze_sensor_brighness"
        android:title="@string/doze_brightness_title" >

        <com.fh.settings.preferences.CustomSeekBarPreference
            android:key="ambient_doze_brightness"
            android:title="@string/ambient_doze_brightness_title"
            android:summary="@string/ambient_doze_brightness_summary"
            android:max="255"
            settings:min="1"
            android:persistent="false" />

        <com.fh.settings.preferences.CustomSeekBarPreference
            android:key="ambient_pulse_brightness"
            android:title="@string/ambient_pulse_brightness_title"
            android:summary="@string/ambient_pulse_brightness_summary"
            android:max="255"
            settings:min="1"
            android:persistent="false" />


    </PreferenceCategory>

</PreferenceScreen>
