<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014-2015 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="power_menu"
    android:title="@string/power_menu_title">

    <PreferenceCategory
        android:key="advanced_reboot_fh"
        android:title="@string/advanced_reboot_title" >

    <lineageos.preference.LineageSecureSettingSwitchPreference
            android:key="advanced_reboot"
            android:icon="@drawable/ic_restart"
            android:title="@string/advanced_reboot_title"
            android:summary="@string/advanced_reboot_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="power_menu_buttons"
        android:title="@string/power_menu_buttons_title" >

    <CheckBoxPreference
        android:key="screenshot"
        android:title="@string/power_menu_screenshot_title"
        android:summary="@string/power_menu_screenshot_summary"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="screenrecord"
        android:title="@string/power_menu_screenrecord_title"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="airplane"
        android:title="@string/power_menu_airplane_title"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="users"
        android:title="@string/power_menu_users_title"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="bugreport"
        android:title="@string/power_menu_bug_report_title"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="lockdown"
        android:title="@string/power_menu_lockdown_title"
        android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
